# Clash-of-clan-clock

./: .gitignore  Dockerfile  alembic.ini  app.py  currentwar.py  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 20240612_a994faa3ffbb_create_clan_table.py  20240612_ca2c3e388c74_create_clan_group_realationship_table.py  20240612_ca2c3e388c74_create_clan_group_relationship_table.py  20240612_d784b62f1600_create_linegroup_table.py
model/: clan.py  db.py
src/: flex.py  setting.py
